name                    : haskell-python-stateful-call
version                 : 0.1.0.0
synopsis                : Call a stateful Python function from Haskell.
license                 : BSD3
license-file            : LICENSE
author                  : cheater <cheater00@gmail.com>
maintainer              : cheater00@gmail.com
copyright               : Copyright (c) 2017
category                : Language
build-type              : Simple
extra-source-files      : README.md
                        , ChangeLog.md
cabal-version           : >=1.10


executable haskell-python-stateful-call
  main-is               : Main.hs
  build-depends         : base >=4.10 && <4.11
                        , cpython
  hs-source-dirs        : src
  default-language      : Haskell2010
  -- other-modules         :
  -- other-extensions      :
